Fixed the following bugs:
- When the user presses "create new folder" and when non of the sides is selected, the folder is to be created on both sides;

- When the user double clicks on the list when non is selected, the entire file tree system goes crazy;

Can now:

- Open and read .txt files on both local and server sides;